test/mpi/errors/cxx/io/Makefile.sm
INCLUDES = -I../../../include -I${srcdir}/../../../include
DEPADD = @MPILIBLOC@ 
smvar_do_sharedlibs = 0

fileerrretx_SOURCES    = fileerrretx.cxx
errgetfilex_SOURCES    = errgetfilex.cxx
errgetfilex_LDADD      = ../../../cxx/util/mtest.o
throwtestfilex_SOURCES = throwtestfilex.cxx
throwtestfilex_LDADD   = ../../../cxx/util/mtest.o

../../../cxx/util/mtest.o: 
	(cd ../../../cxx/util && $(MAKE) mtest.o)

# A special testing target to simplify running just the pt2pt tests
testing:
	../../../runtests -srcdir=$(srcdir) -tests=testlist \
		   -mpiexec=@MPIEXEC@ \
		   -xmlfile=summary.xml
clean-local:
	-rm -f summary.xml
